--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
             <!-- FORM SECTION -->
             <form action="" method="post">
                 <h2>Login to PictureStock</h2>
-                <p class="link-to-login">Dont't have an account? <a href="./create-account.html.html">signup</a></p>
+                <p class="link-to-login">Dont't have an account? <a href="./index.html">signup</a></p>
                 <input type="email" placeholder="Email address" required />
                 <input type="password" placeholder="Password" required />
                 <button type="submit">SIGNUP</button>
