--- a/login.html
+++ b/login.html
@@ -24,7 +24,8 @@
                 <p class="link-to-login">Dont't have an account? <a href="./index.html">signup</a></p>
                 <input type="email" placeholder="Email address" required />
                 <input type="password" placeholder="Password" required />
-                <button type="submit">SIGNUP</button>
+                <button type="submit">LOGIN</button>
+
 
                 <!-- FORGET AND REMEMBER PASSWORD DIVISION-->
                 <div class="remember-and-forget-password">
