adding comfirm password

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                     <input type="password" name="password" id="password" placeholder="Password" required />
                     <i class="fa-solid fa-eye-slash" id="show-password"></i>
                 </div>
+                <div class="password-container">
+                    <input type="password" name="password" id="password" placeholder="Confirm Password" required />
+                    <i class="fa-solid fa-eye-slash" id="show-password"></i>
+                </div>
                 <button type="submit">SIGNUP</button>
                 <hr />
                 <button type="button" class="sign-in-with-google">
