correcting bug created by confirm password input

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                 <input type="text" placeholder="Website (optional)" />
                 <input type="email" placeholder="Email address" required />
                 <div class="password-container">
-                    <input type="password" name="password" id="password" placeholder="Password" required />
-                    <i class="fa-solid fa-eye-slash" id="show-password"></i>
+                    <input type="password" name="password" id="password" placeholder="Password" class="password" required />
+                    <i class="fa-solid fa-eye-slash eye-icon" id="show-password"></i>
                 </div>
                 <div class="password-container">
-                    <input type="password" name="password" id="password" placeholder="Confirm Password" required />
-                    <i class="fa-solid fa-eye-slash" id="show-password"></i>
+                    <input type="password" name="password" id="confirm-password" placeholder="Confirm Password" class="password" required />
+                    <i class="fa-solid fa-eye-slash eye-icon" id="show-password"></i>
                 </div>
                 <button type="submit">SIGNUP</button>
                 <hr />
@@ -47,6 +47,6 @@
                 <img src="./image/group_photo.jpg" alt="" class="image" />
             </div>
         </section>
-        <script src="script.js"></script>
+        <script src="formAndFormValidation.js"></script>
     </body>
 </html>
