--- a/login.html
+++ b/login.html
@@ -24,8 +24,8 @@
                 <p class="link-to-login">Don't have an account? <a href="./index.html">signup</a></p>
                 <input type="email" placeholder="Email address" required />
                 <div class="password-container">
-                    <input type="password" name="password" id="password" placeholder="Password" required />
-                    <i class="fa-solid fa-eye-slash" id="show-password"></i>
+                    <input type="password" name="password" id="password" placeholder="Password" class="password" class="password" required />
+                    <i class="fa-solid fa-eye-slash eye-icon" id="show-password"></i>
                 </div>
                 
                 <button type="submit">LOGIN</button>
@@ -54,6 +54,6 @@
                 <img src="./image/group_photo.jpg" alt="" />
             </div>
         </section>
-        <script src="script.js"></script>
+        <script src="formAndFormValidation.js"></script>
     </body>
 </html>
