--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     
     <!-- THIS REASON FOR ADDING THIS INDEX PAGE IS SO THAT I CAN VE ABLE TO VIEW THE PAGE ON GITHUB -->
-    <a href="./templates/Home.html">Home</a>
+    <a href="./templates/home.html">Home</a>
     
 </body>
 </html>
