complete error page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <!-- THIS REASON FOR ADDING THIS INDEX PAGE IS SO THAT I CAN VE ABLE TO VIEW THE PAGE ON GITHUB -->
+    <!-- THE REASON FOR ADDING THIS INDEX PAGE IS SO THAT I CAN BE ABLE TO VIEW THE PAGE ON GITHUB -->
     <a href="./templates/landing.html">Home</a>
     
 </body>
